add TestFile model and refactor FXML: introduce a TestFile class for managing test file properties; replace verbose UI configurations with custom controls for SchematronEditor, TemplateLibrary, and VisualBuilder to streamline FXML structure